[package]
name = "basin2"
version = "15.2.1"
authors = ["Protryon <max.bruce12@gmail.com>"]
edition = "2018"
publish = false

[dependencies]
lazy_static = "1.4.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
log = "0.4.8"
env_logger = "0.6.1"
uuid = { version = "0.5.1", features = ["serde", "v4"] }
time = { version = "0.2.6", features = ["serde"] }
tokio = { version = "0.2", features = ["full"] }
tokio-util = { version = "0.2", features = ["full"] }
futures = "0.3"
futures-util = "0.3"
enum_primitive = "0.1.1"
linked-hash-map = "0.5.2"
either = "1.5.3"
basin2-protocol = { path = "../protocol/" }
async-trait = "0.1.24"
pkg-version = "1.0.0"