[package]
name = "basin2-data"
version = "152.1.0"
authors = ["Protryon <max.bruce12@gmail.com>"]
edition = "2018"

[dependencies]
lazy_static = "1.4.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
log = "0.4.8"
env_logger = "0.6.1"
enum_primitive = "0.1.1"
linked-hash-map = "0.5.2"
either = "1.5.3"
basin2-lib = { path = "../lib/", version = "152.1.0" }
async-trait = "0.1.24"
cenum = "1.0"