[package]
name = "basin2-lib"
version = "152.1.0"
authors = ["Protryon <max.bruce12@gmail.com>"]
license = "GPL-3.0-or-later"
edition = "2018"
repository = "https://github.com/Protryon/basin2"
description = "Basin2 subpackage for general use."
keywords = [ "basin", "basin2", "minecraft" ]

[dependencies]
lazy_static = "1.4.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
log = "0.4.8"
env_logger = "0.6.1"
enum_primitive = "0.1.1"
linked-hash-map = "0.5.2"
either = "1.5.3"
async-trait = "0.1.24"
bytes = "0.5"
uuid = { version = "0.5.1", features = ["serde", "v4"] }
